# metal-cpp-101

./: .gitignore  .lefthook.yaml  AGENTS.md  README.md  meson.build  pixi.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: add.metal  basic_addition.cpp  list_devices.cpp
